[tool.poetry]
name = "power-consumption"
version = "0.1.0"
description = ""
authors = ["false <false@wizard-limit.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pyserial = {version = "*", optional = true}
psycopg2-binary = "*"
bokeh = {version = "*", optional = true}
mh-z19 = {version = "*", optional = true}
pandas = {version = "*", optional = true}
smbus = {version = "*", optional = true}
gpiozero = {version = "*", optional = true}
adafruit-circuitpython-ssd1306 = {version = "*", optional = true}
Pillow = {version = "*", optional = true}

[tool.poetry.extras]
poller = ["pyserial", "mh-z19", "smbus", "gpiozero", "adafruit-circuitpython-ssd1306", "Pillow"]
graph = ["bokeh", "pandas"]

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-docstrings = "*"
mypy = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
